# taploot

./: .gitignore  Justfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  oui.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  oui.rs
src-tauri/src/commands/: import.rs  query.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/parser/: pcap.rs
src-tauri/src/protocols/: modbus.rs
src/canvas/: CanvasEdge.ts  CanvasNode.ts
src/components/: AppHeader.vue  EdgeDetailPanel.vue  EdgeFilterBar.vue  FileDropZone.vue  NodeDetailPanel.vue  SearchBar.vue  TimelineBar.vue  TopologyCanvas.vue
src/composables/: useCanvas.ts  useTauri.ts
src/stores/: app.ts  timeline.ts  topology.ts
src/types/: canvas.ts  network.ts
